tests/toy/neg/001651_mutation.toylang
program a = { while a else do sleep; } .
